--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blowfish-resizer",
   "author": "any",
   "license": "MIT",
-  "version": "0.0.12",
+  "version": "0.0.14-alpha.0",
   "description": "blowfish resizer",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
