--- a/editor/package.json
+++ b/editor/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "webpack --config ./webpack.config.build.js"
+    "build": "webpack --config ./webpack.config.build.js && node -e \"console.log('EDITOR BUILD COMPLETED');\""
   },
   "author": "",
   "license": "ISC",
